<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="100dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintBottom_toBottomOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:text="@string/topscorer_name" />

        <TextView
            android:id="@+id/tv_item_goals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_name"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
            tools:text="@string/total_goals" />

        <TextView
            android:id="@+id/tv_item_matches"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_goals"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_goals"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_goals"
            tools:text="@string/total_matches" />

        <TextView
            android:id="@+id/tv_item_years"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:ellipsize="end"
            android:maxLines="5"
            card_view:layout_constraintStart_toStartOf="@+id/tv_item_matches"
            card_view:layout_constraintEnd_toEndOf="@+id/tv_item_matches"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_item_matches"
            card_view:layout_constraintBottom_toBottomOf="parent"
            tools:text="@string/total_years" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
